<resources>
    <string name="app_name">AW</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="temperature">Temperature</string>
    <string name="condition">Condition</string>
    <string name="location">Location</string>
    <string name="powered_by_yahoo">powered by Yahoo!</string>
    <string name="condition_icon">Condition Icon</string>
    <string name="loading">Loading&#8230;</string>
    <string name="temperature_output">%1$d&#176;%2$s</string>
    <string name="pressure_output">%1$d&#176;%2$s</string>
    <string name="update_location">Update Location</string>
    <string name="settings">Settings</string>
    <string name="cache_exception">No Cached Weather Data</string>
    <string name="location_permission_needed">Device location is needed for Weather GeoLocation</string>
    <string name="disable_geolocation">Change Settings</string>
    <string name="day">Day</string>
    <string name="high">High</string>
    <string name="low">Low</string>

    <string name="before_calculate">"00,00"</string>

    <string-array name="acc_type">
        <item>Income</item>
    </string-array>

</resources>
